--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:prisma": "prisma generate"
   },
@@ -15,16 +16,30 @@
     "@nexus/schema": "^0.13.1",
     "@prisma/client": "^2.0.0-beta.4",
     "apollo-server": "^2.12.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^15.0.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-subscriptions": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
     "nexus-prisma": "^0.12.0"
   },
   "devDependencies": {
     "@prisma/cli": "^2.0.0-beta.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.6",
+    "@types/graphql-iso-date": "^3.3.3",
+    "@types/jest": "^25.2.1",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/node": "^13.13.4",
+    "@types/ws": "^7.2.4",
     "dotenv": "^8.2.0",
-    "esm": "^3.2.25"
+    "jest": "^25.5.3",
+    "ts-jest": "^25.4.0",
+    "ts-node": "^8.9.1",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   },
   "engines": {
     "node": ">=10.0.0"
-  }  
+  }
 }
