--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server.ts",
+    "lint": "eslint src/**/**/*.ts && eslint tests/**/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate:prisma": "prisma generate"
   },
@@ -17,6 +18,12 @@
     "@prisma/client": "^2.0.0-beta.4",
     "apollo-server": "^2.12.0",
     "bcryptjs": "^2.4.3",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-subscriptions": "^1.1.0",
@@ -32,6 +39,8 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/node": "^13.13.4",
     "@types/ws": "^7.2.4",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "dotenv": "^8.2.0",
     "jest": "^25.5.3",
     "ts-jest": "^25.4.0",
