--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "dev": "ts-node-dev --no-notify --respawn --transpileOnly src/server.ts",
     "lint": "eslint --fix src/**/**/*.ts && eslint --fix tests/**/**/*.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate:prisma": "prisma generate"
+    "generate:prisma": "prisma generate",
+    "migrate:save": "prisma migrate save --experimental",
+    "migrate:up": "prisma migrate up --experimental",
+    "studio": "prisma studio --experimental"
   },
   "dependencies": {
     "@nexus/schema": "^0.13.1",
